--- a/css/style.css
+++ b/css/style.css
@@ -72,16 +72,24 @@ html {
   border: 1px solid #f16a55;
 }
 .load {
-  width: 100px;
-  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
   position: fixed;
   left: 0;
   top: 0;
-  background: #2aa56d url(../img/loading.png) no-repeat;
+  background-color: #2aa56d;
   background-size: 100px;
-  animation: loading 2s steps(45);
-  -webkit-animation: loading 2s steps(45);
   z-index: 100;
+}
+.loading {
+  width: 100px;
+  height: 100px;
+  background: url(../img/loading.png) no-repeat;
+  animation: loading 2s steps(45) infinite;
+  -webkit-animation: loading 2s steps(45) infinite;
 }
 .load.over {
   animation: loadover 0.8s 0.3s forwards;
